# StartInsight

./: .claudignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  DESIGN.md  PHASE-2-READY.md  PRODUCTION-READINESS-IMPLEMENTATION.md  README.md  SECURITY-FIXES-REVIEW-1.md  SECURITY-FIXES-REVIEW-2.md  SECURITY-FIXES-REVIEW-3.md  SECURITY-FIXES-REVIEW-4.md  SECURITY-FIXES-REVIEW-5.md  SECURITY-FIXES-REVIEW-6-FINAL.md  SETUP.md  TODOS.md  WEEK1-IMPLEMENTATION-SUMMARY.md  docker-compose.yml  render.yaml  security-assessment.md  test_phase_3_7.md
backend/: .dockerignore  .env.example  .env.production.example  .env.staging.example  Dockerfile  README.md  SECURITY_IMPLEMENTATION_PLAN.md  alembic.ini  check_db_connection.py  main.py  pyproject.toml  railway.json  railway.toml  run_analysis.py  setup_database.sql  start.sh  test_content_quality.py  test_enhanced_analyzer.py  test_phase_1_4.py  test_phase_1_5.py  test_phase_2_1.py  test_phase_2_2.py  test_phase_2_3.py  test_phase_2_5_integration.py
backend/alembic/: env.py
backend/alembic/versions/: 29b08a2199f2_add_trend_predictions_column_to_insights.py  3d17254743b8_create_insights_table.py  448430173035_add_competitor_profiles_and_snapshots_.py  68bc7f9b5a31_phase_6_7_subscriptions_teams_api_keys_.py  6b16d01c6cf7_merge_system_settings_heads.py  955917ed64f1_create_raw_signals_table.py  a001_phase_4_1_user_auth.py  a002_phase_4_2_admin_portal.py  a003_phase_4_3_enhanced_scoring.py  a004_phase_4_4_insight_interactions.py  a005_phase_5_1_custom_analyses.py  b001_webhook_events_idempotency.py  b002_soft_delete_cascade_fixes.py  b003_add_visualization_columns_to_insights.py  b004_add_research_requests_table.py  b005_create_tools_table.py  b006_create_success_stories_table.py  b007_create_trends_table.py  b008_create_market_insights_table.py  b009_add_language_support.py  b010_add_production_indexes.py  b011_add_content_hash_to_raw_signals.py  b012_phase_8_1_content_quality.py  b013_phase_8_2_pipeline_dashboard.py  b014_phase_8_3_user_analytics.py  b015_phase_8_4_agent_control.py  b016_phase_9_1_user_preferences.py  b017_phase_9_2_idea_chat.py  b018_phase_9_3_community.py  b019_phase_9_5_social.py  b020_phase_9_6_gamification.py  b021_phase_10_integrations.py  b022_add_market_sizing_column.py  b023_add_source_url_to_success_stories.py  b5d863d6ab2c_merge_phase_9_2_and_phase_12_migrations.py  b94254847a13_add_foreign_key_constraints_to_.py  c001_add_schedule_columns_to_agent_configurations.py  c002_add_mode_to_idea_chats.py  c003_create_system_settings_table.py  c004_add_missing_insight_admin_columns.py  (+16 more)
backend/app/: main.py  worker.py
backend/app/agents/: __init__.py  analyzer.py  chat_agent.py  competitive_intel_agent.py  content_generator_agent.py  enhanced_analyzer.py  market_insight_publisher.py  market_intel_agent.py  quality_reviewer.py  research_agent.py  sentry_tracing.py
backend/app/api/: deps.py  utils.py
backend/app/core/: cache.py  config.py  constants.py  decorators.py  logging.py  rate_limits.py  supabase.py
backend/app/db/: base.py  query_helpers.py  session.py  types.py
backend/app/marketing/: __init__.py
backend/app/middleware/: __init__.py  api_version.py  dlp_monitoring.py  rate_limiter.py  request_size_limit.py  security_headers.py  session_security.py  tracing.py  zero_trust_security.py
backend/app/models/: __init__.py  admin_user.py  agent_control.py  agent_execution_log.py  api_key.py  collection.py  comment.py  community.py  competitor_profile.py  content_review.py  custom_analysis.py  gamification.py  idea_chat.py  insight.py  insight_interaction.py  integrations.py  market_insight.py  newsletter.py  pipeline_monitoring.py  pipeline_run.py  raw_signal.py  report_request.py  research_request.py  saved_insight.py  social.py  source_health.py  subscription.py  success_story.py  system_metric.py  system_setting.py  team.py  tenant.py  tool.py  trend.py  user.py  user_analytics.py  user_preferences.py  user_rating.py  webhook_event.py
backend/app/monitoring/: __init__.py  metrics.py
backend/app/schemas/: __init__.py  admin.py  build_tools.py  chat.py  enhanced_insight.py  insight.py  insight_validation.py  public_content.py  research.py  signals.py  user.py
backend/docs/: BACKUP_RESTORE.md  PMF-DEPLOYMENT.md
backend/scripts/: backfill_30_days.py  backfill_trends_table.py  cleanup_titles.py  confirm_user_email.py  create_admin.py  create_user.py  deprecated_backfill_30_days.py  deprecated_backfill_enhanced.py  deprecated_backfill_trend_data.py  deprecated_backfill_trends_table.py  deprecated_reenrich_insights.py  deprecated_run_data_collection.py  run_data_collection.py  seed_agent_configs.py  seed_agent_prompts.py  seed_content.py  seed_expanded_trends.py  seed_insights_with_scores.py  seed_market_insights.py  seed_public_content.py  seed_test_insights.py  sentry_autofix.py  update_user_password.py
backend/tests/: conftest.py  test_api.py  test_conviction_funnel.py
frontend/: Dockerfile  (+17 more)
(+423 files in other folders)
