[project]
name = "startinsight-backend"
version = "0.1.0"
description = "StartInsight Backend - AI-powered business intelligence engine for startup ideas"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "StartInsight Team" }
]
dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    # AI & Agents (Phase 2 - included for completeness)
    "pydantic-ai>=0.0.13",
    "anthropic>=0.25.0",
    "openai>=1.12.0",
    # Web Scraping
    "firecrawl-py>=0.0.16",
    "praw>=7.7.1",
    "pytrends>=4.9.2",
    # Task Queue
    "arq>=0.25.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "apscheduler>=3.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
